# cudaTraining

./: .gitignore  CMakelists.txt  README.md  main.cu
CoffeBeforeArch/: ..gitignore.un~  .gitignore  CMakeLists.txt  Coalescing.cu  basicMatrixMultiplication  basicMatrixMultiplication.cu  cacheTiledMatMulti  cacheTiledMatMulti.cu  cublasMultiplication.cu  deviceProp  deviceProp.cu  matrix_mull_acc.cpp  vectorAddition  vectorAddition1.cu
CoffeBeforeArch/convolution/: 1d_constant_memory  1d_constant_memory.cu  1d_naive  1d_naive.cu  1d_tiled.cu  convolution_2d.cu
CoffeBeforeArch/histogram/: global_atomic.cu  shmem_atomic.cu
CoffeBeforeArch/libraries/: cublasAddition.cu
CoffeBeforeArch/plotting/: common.h  kernel.cu
CoffeBeforeArch/plotting/clock/: clock  clock.cu  plot_data.gp
CoffeBeforeArch/plotting/matrixMul/: common.h  main.cu  plot_data.gp
CoffeBeforeArch/plotting/sumReduction/: common.h  main.cu
CoffeBeforeArch/sumReduction/: bankConflict  bankConflict.cu  cooperative_groups.cu  device_function  device_function.cu  diverged.cu  noConflict.cu  reduce_idle.cu  sum_reduction_diverged.cu
CoffeBeforeArch/vectorAdd/: UnifiedMemoryVecAdd.cu  vectorAddition.cu  vector_add_um.cu
cudaGuide/: vecAdd.cu
exercises/: CMakeLists.txt  GMEfficiently.cu  introductionToCUDA.cu  matrixTranspose.cu  optimizeTransfer.cu  overlapDT.cu  performanceMetrics.cu  queryDevice.cu  saxpyCuBLAS.cu  sharedMemory.cu
exercises/unified-memory/: CMakeLists.txt  dataElem.cu  dataElem_um.cu  dataElem_um_c++_1.cu
